--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/animations": "~11.2.3",
     "@angular/cdk": "^11.2.3",
-    "@angular/common": "~11.2.3",
+    "@angular/common": "^11.2.4",
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
     "@angular/forms": "~11.2.3",
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "^9.1.1",
     "bootstrap": "^4.6.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
